# thermal-tiny-1c-usb-control

./: CMakeLists.txt  camera.cpp  cmd.cpp  display.cpp  display.h  lib_dll_copy.py  libs_version.txt  sample.cpp  sample.h  temperature.cpp  ╢α╡π▒Ω╢¿╖╜░╕╦╡├≈V1.0.md
include/: Doxyfile  all_config.h  falcon_cmd.h  libirparse.h  libirprocess.h  libirtemp.h  libiruvc.h  mainpage.md  test_cmd.h
include/html/: all__config_8h.html  all__config_8h_source.html  annotated.html  classes.html  falcon__cmd_8h.html  falcon__cmd_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  globals_eval_c.html  globals_eval_d.html  globals_eval_f.html  globals_eval_h.html  globals_eval_i.html  globals_eval_k.html  globals_eval_l.html  globals_eval_m.html  globals_eval_n.html  globals_eval_o.html  globals_eval_p.html  globals_eval_r.html  globals_eval_s.html  globals_eval_t.html  globals_eval_v.html  globals_eval_w.html  globals_eval_y.html  globals_eval_z.html  globals_f.html  globals_func.html  globals_g.html  globals_h.html  globals_i.html  (+129 more)
include/latex/: all__config_8h.tex  all__config_8h_source.tex  annotated.tex  falcon__cmd_8h.tex  falcon__cmd_8h_source.tex  files.tex  index.tex  libirparse_8h.tex  libirparse_8h_source.tex  libirprocess_8h.tex  libirprocess_8h_source.tex  libirtemp_8h.tex  libirtemp_8h_source.tex  libiruvc_8h.tex  libiruvc_8h_source.tex  (+50 more)
libir_sample/: libir_sample.sln  libir_sample.vcxproj  libir_sample.vcxproj.filters
(+5 files in other folders)
